--- a/1.basic/website/unique-tech/input.css
+++ b/1.basic/website/unique-tech/input.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 body {
-  @apply m-0 p-0 relative box-border tracking-wider font-exo text-secondary ;
+  @apply m-0 p-0 relative box-border tracking-wider font-exo text-secondary;
 }
 
 section {
@@ -32,8 +32,14 @@ section {
   @apply text-red-500 hover:border-red-500;
 }
 
+.btn {
+  @apply uppercase font-bold  rounded-lg hover:text-white hover:bg-primary transition duration-300;
+}
 .btn-primary {
-  @apply uppercase text-white bg-secondary border rounded-sm hover:bg-primary hover:border-secondary transition duration-300;
+  @apply uppercase text-white bg-secondary border hover:bg-primary hover:border-secondary transition duration-300;
+}
+.btn-secondary {
+  @apply uppercase font-bold bg-primary text-secondary  rounded-lg hover:text-white transition duration-300;
 }
 
 .dotActive {
@@ -41,5 +47,75 @@ section {
 }
 
 .activeImg {
-  @apply opacity-100
+  @apply opacity-100;
+}
+
+.img_rotateY {
+  transform: rotateY(180deg);
+}
+
+.bg_gradient {
+  /* background-color: #f3f3f3;
+  background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png"); */
+
+  background: radial-gradient(
+      circle at top left,
+      transparent 9%,
+      #f3f3f3 10%,
+      #f3f3f3 15%,
+      transparent 16%
+    ),
+    radial-gradient(
+      circle at bottom left,
+      transparent 9%,
+      #f3f3f3 10%,
+      #f3f3f3 15%,
+      transparent 16%
+    ),
+    radial-gradient(
+      circle at top right,
+      transparent 9%,
+      #f3f3f3 10%,
+      #f3f3f3 15%,
+      transparent 16%
+    ),
+    radial-gradient(
+      circle at bottom right,
+      transparent 9%,
+      #f3f3f3 10%,
+      #f3f3f3 15%,
+      transparent 16%
+    ),
+    radial-gradient(circle, transparent 25%, #ffffff 26%),
+    linear-gradient(
+      45deg,
+      transparent 46%,
+      #f3f3f3 47%,
+      #f3f3f3 52%,
+      transparent 53%
+    ),
+    linear-gradient(
+      135deg,
+      transparent 46%,
+      #f3f3f3 47%,
+      #f3f3f3 52%,
+      transparent 53%
+    );
+  background-size: 3em 3em;
+  background-color: #ffffff;
+  opacity: 1;
+}
+
+.card {
+  @apply max-h-[350px] lg:max-h-[220px] flex p-5 space-x-5 rounded-sm overflow-auto  hover:bg-primary transition ease-in duration-300;
+}
+
+.card::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.2);
+}
+.card::-webkit-scrollbar-thumb {
+  @apply bg-primary;
+}
+.card::-webkit-scrollbar {
+  width: 5px;
 }
