--- a/1.basic/website/daraz-clone/input.css
+++ b/1.basic/website/daraz-clone/input.css
@@ -47,3 +47,62 @@ body {
 .languageCheck::before {
   @apply content-[''] w-3 h-3 rounded-full bg-red-500 ring-2 absolute top-[50%] -translate-y-[50%] left-0;
 }
+
+/* Main Menu CSS */
+
+/* Nav CSS */
+.main_menu {
+  @apply relative w-[30vw] lg:w-[240px] h-[345px] bg-white py-3 drop-shadow-md rounded-lg z-50;
+}
+
+.menu_link {
+  @apply relative w-full capitalize inline-block p-1 text-sm transition ease-in duration-300;
+}
+
+.menu_icon_angle {
+  @apply absolute top-1/2 right-1 transform -translate-y-1/2 -translate-x-5 opacity-0 invisible transition ease-in duration-300;
+}
+
+.main_menu li:hover > .menu_link {
+  @apply bg-gray-200 text-primary;
+}
+
+.menu_link:hover .menu_icon_angle,
+.menu_link:active .menu_icon_angle {
+  @apply opacity-100 visible translate-x-0;
+}
+
+/* Dropdown CSS */
+.dropdown {
+  @apply w-[20vw] lg:w-[240px] h-full  absolute top-0 right-0 -z-10 opacity-0 transform translate-x-0 invisible  transition ease-in duration-300;
+}
+.dropdown_menu {
+  @apply relative w-full h-full -right-[97%] bg-white py-3 drop-shadow-md rounded-lg  z-40;
+}
+
+.main_menu li:hover .dropdown {
+  @apply opacity-100 visible translate-x-5;
+}
+.dropdown:hover .dropdown_menu {
+  @apply rounded-none rounded-l-lg;
+}
+
+/* Sub Dropdown Css */
+.sub_dropdown {
+  @apply w-[50vw] lg:w-[690px] h-full absolute top-0 right-0 -z-10 opacity-0 transform translate-x-0 invisible  transition ease-in duration-300;
+}
+
+.sub_dropdown_menu {
+  @apply relative w-full h-full  -right-[97%] bg-white py-3 drop-shadow-md rounded-r-lg z-40;
+}
+
+.dropdown_menu li:hover .sub_dropdown {
+  @apply opacity-100 visible translate-x-5;
+}
+
+/* Slider CSS */
+.slider_area {
+  width: calc(100% - 240px);
+  height: 345px;
+  margin-left: 13px;
+}
