--- a/1.basic/website/daraz-clone/src/css/main.css
+++ b/1.basic/website/daraz-clone/src/css/main.css
@@ -588,8 +588,20 @@ video {
   position: relative;
 }
 
+.bottom-\[10\%\]{
+  bottom: 10%;
+}
+
+.left-1\/2{
+  left: 50%;
+}
+
 .right-2{
   right: 0.5rem;
+}
+
+.top-1\/2{
+  top: 50%;
 }
 
 .top-\[10\%\]{
@@ -641,6 +653,10 @@ video {
   height: 80%;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .max-h-\[50px\]{
   max-height: 50px;
 }
@@ -671,6 +687,28 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.max-w-\[940px\]{
+  max-width: 940px;
+}
+
+.-translate-x-1\/2{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .flex-row{
@@ -725,6 +763,18 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
+.scroll-smooth{
+  scroll-behavior: smooth;
+}
+
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -746,13 +796,18 @@ video {
   border-bottom-left-radius: 0.375rem;
 }
 
-.border{
-  border-width: 1px;
+.rounded-l-md{
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
-.border-primary{
-  --tw-border-opacity: 1;
-  border-color: rgb(248 86 6 / var(--tw-border-opacity));
+.rounded-r-md{
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
+.border{
+  border-width: 1px;
 }
 
 .border-secondary{
@@ -780,6 +835,10 @@ video {
   background-color: rgb(248 86 6 / var(--tw-bg-opacity));
 }
 
+.bg-opacity-30{
+  --tw-bg-opacity: 0.3;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -795,6 +854,11 @@ video {
 
 .p-5{
   padding: 1.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-4{
@@ -815,6 +879,11 @@ video {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5{
@@ -847,6 +916,11 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -1236,6 +1310,23 @@ body{
   width: calc(100% - 240px);
   height: 345px;
   margin-left: 13px;
+}
+
+.dot{
+  height: 0.75rem;
+  width: 0.75rem;
+  cursor: pointer;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.dotActive{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .hover\:text-primary:hover{
