--- a/1.basic/website/daraz-clone/src/css/main.css
+++ b/1.basic/website/daraz-clone/src/css/main.css
@@ -617,12 +617,25 @@ video {
   margin-right: 0.25rem;
 }
 
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
 
 .mr-2{
   margin-right: 0.5rem;
+}
+
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -639,6 +652,10 @@ video {
 
 .h-12{
   height: 3rem;
+}
+
+.h-20{
+  height: 5rem;
 }
 
 .h-4{
@@ -663,6 +680,10 @@ video {
 
 .w-12{
   width: 3rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-4{
@@ -735,8 +756,22 @@ video {
   align-items: center;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
 .justify-between{
   justify-content: space-between;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -775,6 +810,10 @@ video {
   white-space: nowrap;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -785,6 +824,10 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .rounded-xl{
@@ -810,9 +853,32 @@ video {
   border-width: 1px;
 }
 
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-r-2{
+  border-right-width: 2px;
+}
+
+.border-primary{
+  --tw-border-opacity: 1;
+  border-color: rgb(248 86 6 / var(--tw-border-opacity));
+}
+
 .border-secondary{
   --tw-border-opacity: 1;
   border-color: rgb(70 70 70 / var(--tw-border-opacity));
+}
+
+.border-b-secondary{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(70 70 70 / var(--tw-border-opacity));
+}
+
+.border-r-gray-300{
+  --tw-border-opacity: 1;
+  border-right-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .bg-\[\#AD3C04\]{
@@ -820,9 +886,19 @@ video {
   background-color: rgb(173 60 4 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F5F5F5\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#FFE1D2\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 225 210 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FFE8DE\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 232 222 / var(--tw-bg-opacity));
 }
 
 .bg-black{
@@ -835,8 +911,17 @@ video {
   background-color: rgb(248 86 6 / var(--tw-bg-opacity));
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-30{
   --tw-bg-opacity: 0.3;
+}
+
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
 }
 
 .object-cover{
@@ -852,6 +937,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-5{
   padding: 1.25rem;
 }
@@ -859,6 +948,11 @@ video {
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4{
@@ -899,6 +993,10 @@ video {
   padding-right: 0.5rem;
 }
 
+.pr-3{
+  padding-right: 0.75rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -928,6 +1026,10 @@ video {
   line-height: 1rem;
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
 .capitalize{
   text-transform: capitalize;
 }
@@ -935,6 +1037,11 @@ video {
 .text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(248 86 6 / var(--tw-text-opacity));
 }
 
 .text-red-400{
@@ -959,6 +1066,12 @@ video {
 
 .opacity-0{
   opacity: 0;
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 body{
@@ -1329,9 +1442,23 @@ body{
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.hover\:bg-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 86 6 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-100:hover{
+  --tw-bg-opacity: 1;
+}
+
 .hover\:text-primary:hover{
   --tw-text-opacity: 1;
   color: rgb(248 86 6 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:opacity-80:hover{
@@ -1382,6 +1509,10 @@ body{
 
   .lg\:w-\[55vw\]{
     width: 55vw;
+  }
+
+  .lg\:grid-cols-9{
+    grid-template-columns: repeat(9, minmax(0, 1fr));
   }
 
   .lg\:flex-nowrap{
